--- a/src/CasinovaAll/Silverlights/CasinovaAllStars/MainPage.xaml
+++ b/src/CasinovaAll/Silverlights/CasinovaAllStars/MainPage.xaml
@@ -78,6 +78,7 @@
         </Grid>
 
     	<TheS_Casinova_Chat_Controls:ChatUI VerticalAlignment="Bottom" Width="Auto" Height="150" Margin="0"/>
+        <Button Content="Test Statistics" HorizontalAlignment="Left" Margin="522,308,0,0" Name="TestStatisticsButton" Click="TestStatisticsButton_Click" VerticalAlignment="Top" Width="106" />
     </Grid>
 
 </UserControl>
