--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GamePlayUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GamePlayUI.xaml
@@ -16,24 +16,27 @@
 	</UserControl.DataContext>
 
 	<Grid x:Name="LayoutRoot">
+		<Rectangle RadiusY="4" RadiusX="4" Stroke="Black"/>
 		<Grid Height="40" VerticalAlignment="Top">
 			<Rectangle Fill="Black" Stroke="Black"/>
 			<TextBlock x:Name="Title" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Title" VerticalAlignment="Center" Margin="8,0,0,0" FontSize="26.667" Foreground="White" FontWeight="Bold"/>
 		</Grid>
 		<Grid Margin="0,40,0,0">
 			<TextBlock x:Name="GameTime" TextWrapping="Wrap" Text="GameTime" VerticalAlignment="Top" FontSize="21.333" Margin="8,8,8,0" FontWeight="Bold" TextAlignment="Center"/>
-			<Grid Height="70" Margin="150,64,150,0" VerticalAlignment="Top">
+			<Grid Margin="150,64,150,226">
 				<Rectangle Fill="#FFEBEBEB" RadiusY="4" RadiusX="4" Stroke="Black"/>
-				<TextBlock x:Name="Winner" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Winner" FontSize="16" Margin="0,18,0,0" VerticalAlignment="Top"/>
-				<TextBlock x:Name="WinnerInformation" TextWrapping="Wrap" Text="WinnerInformation" Margin="0,45,0,0" VerticalAlignment="Top" TextAlignment="Center"/>
+				<Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+					<TextBlock x:Name="Winner" TextWrapping="Wrap" Text="Winner" FontSize="16" Margin="72,0,71,20" d:LayoutOverrides="Width, Height"/>
+					<TextBlock x:Name="WinnerInformation" TextWrapping="Wrap" Text="WinnerInformation" TextAlignment="Center" VerticalAlignment="Bottom"/>
+				</Grid>
 			</Grid>
-			<Grid HorizontalAlignment="Left" Height="66" Margin="100,194,0,0" VerticalAlignment="Top" Width="147">
-				<Button x:Name="BetBlack" Content="Black" Height="46" VerticalAlignment="Top"/>
-				<TextBlock x:Name="TotalAmountOfBlack" TextWrapping="Wrap" Text="TotalAmountOfBlack" VerticalAlignment="Bottom" TextAlignment="Center"/>
+			<Grid HorizontalAlignment="Left" Margin="100,194,0,100" Width="147">
+				<Button x:Name="BetBlack" Content="Black" Margin="0,0,0,20" Height="46" VerticalAlignment="Bottom"/>
+				<TextBlock x:Name="TotalAmountOfBlack" TextWrapping="Wrap" Text="TotalAmountOfBlack" TextAlignment="Center" Margin="0,50,0,0" d:LayoutOverrides="Height" VerticalAlignment="Bottom"/>
 			</Grid>
-			<Grid HorizontalAlignment="Right" Height="66" Margin="0,194,100,0" VerticalAlignment="Top" Width="147">
-				<Button x:Name="BetWhite" Content="White" Height="46" VerticalAlignment="Top"/>
-				<TextBlock x:Name="TotalAmountOfWhite" TextWrapping="Wrap" Text="TotalAmountOfWhite" VerticalAlignment="Bottom" TextAlignment="Center"/>
+			<Grid HorizontalAlignment="Right" Margin="0,194,100,100" Width="147">
+				<Button x:Name="BetWhite" Content="White" Margin="0,0,0,20" VerticalAlignment="Bottom" Height="46"/>
+				<TextBlock x:Name="TotalAmountOfWhite" TextWrapping="Wrap" Text="TotalAmountOfWhite" TextAlignment="Center" Margin="0,50,0,0" d:LayoutOverrides="Height" VerticalAlignment="Bottom"/>
 			</Grid>
 		</Grid>
 	</Grid>
