--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/GamePlayPage.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/GamePlayPage.xaml
@@ -11,7 +11,7 @@
     	<Grid.ColumnDefinitions>
     		<ColumnDefinition/>
     	</Grid.ColumnDefinitions>
-    	<!--<TheS_Casinova:GamePlayUI Width="Auto" Height="Auto" Margin="0,0,132,0"/>-->
-    	<!--<ListBox x:Name="GameTables" HorizontalAlignment="Right" Width="128"/>-->
+    	<TheS_Casinova:GamePlayUI Width="Auto" Height="Auto" Margin="0,0,132,0"/>
+    	<ListBox x:Name="GameTables" HorizontalAlignment="Right" Width="128"/>
     </Grid>
 </navigation:Page>
