--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Controls/MLNUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Controls/MLNUI.xaml
@@ -3,7 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" x:Class="TheS.Casinova.MLN.MLNUI"
+    xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" x:Class="TheS.Casinova.MLN.Controls.MLNUI"
     mc:Ignorable="d"
     d:DesignHeight="400" d:DesignWidth="600">
     
@@ -13,7 +13,7 @@
     		<Rectangle Fill="#FFFFB4B4" Stroke="Black"/>
     		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current bonus available:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold" FontSize="16"/>
     		<TextBlock x:Name="CurrentBunusAvailable" HorizontalAlignment="Left" TextWrapping="Wrap" Text="CurrentBunusAvailable" VerticalAlignment="Top" Margin="233,8,0,0" FontSize="16"/>
-    		<Button x:Name="Deposit" Content="Deposit" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,8,8,0" Click="MLNDepositButton_Click" />
+            <Button x:Name="DepositButton" Content="Deposit" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,8,8,0" Click="DepositButton_Click" />
     		<sdk:DataGrid x:Name="MLNInformation" Margin="8,36,8,7"/>
     	</Grid>
     	<Grid Margin="0,108,0,0">
@@ -27,9 +27,9 @@
     			<TextBlock x:Name="MLNFirstLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="MLNFirstLevel" VerticalAlignment="Top" Margin="61,32,0,0"/>
     			<TextBlock x:Name="SecondLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="SecondLevel" VerticalAlignment="Top" Margin="61,64,0,0"/>
     			<TextBlock x:Name="ThirdLevel" HorizontalAlignment="Left" TextWrapping="Wrap" Text="ThirdLevel" VerticalAlignment="Top" Margin="61,96,0,0"/>
-    			<Button x:Name="FirstView" Content="View" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,29,8,0" Click="FirstViewButton_Click" />
-    			<Button x:Name="SecondView" Content="View" HorizontalAlignment="Right" Width="75" Margin="0,61,8,0" VerticalAlignment="Top" Click="SecondViewButton_Click" />
-    			<Button x:Name="ThirdView" Content="View" HorizontalAlignment="Right" Width="75" Margin="0,93,8,0" VerticalAlignment="Top" Click="ThirdViewButton_Click" />
+    			<Button x:Name="FirstView" Content="View" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,29,8,0" Click="FirstView_Click" />
+                <Button x:Name="SecondView" Content="View" HorizontalAlignment="Right" Width="75" Margin="0,61,8,0" VerticalAlignment="Top" Click="SecondView_Click" />
+                <Button x:Name="ThirdView" Content="View" HorizontalAlignment="Right" Width="75" Margin="0,93,8,0" VerticalAlignment="Top" Click="ThirdView_Click" />
     		</Grid>
     	</Grid>
 
