--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Views/AnotherPlayerInformationWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Views/AnotherPlayerInformationWindow.xaml
@@ -1,13 +1,17 @@
-﻿<controls:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="TheS.Casinova.MLN.AnotherPlayerInformationWindow"
+﻿<controls:ChildWindow
+           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+           xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
+           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="TheS.Casinova.MLN.Views.AnotherPlayerInformationWindow"
            Width="640" Height="550" 
-           Title="Another player information." FontSize="21.333">
+           Title="Another player information" FontSize="21.333">
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.RowDefinitions>
-        	<RowDefinition />
-        	<RowDefinition Height="Auto" />
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Button x:Name="CloseButton" Content="Close" Click="CloseButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" FontSize="11" />
+        <Button x:Name="CloseButton" Content="Close" Click="CancelButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" FontSize="11" />
 
     	<Grid Height="104" VerticalAlignment="Top" Margin="0">
     		<Rectangle Fill="#FFFFB4B4" Stroke="Black"/>
