--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerProfile/Views/AccountManagerWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerProfile/Views/AccountManagerWindow.xaml
@@ -1,4 +1,4 @@
-﻿<sdk:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_MLN="clr-namespace:TheS.Casinova.MLN" mc:Ignorable="d" x:Class="TheS.Casinova.PlayerProfile.Views.AccountManagerWindow"
+﻿<sdk:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_MLN="clr-namespace:TheS.Casinova.MLN" xmlns:TheS_Casinova_MLN_Controls="clr-namespace:TheS.Casinova.MLN.Controls" mc:Ignorable="d" x:Class="TheS.Casinova.PlayerProfile.Views.AccountManagerWindow"
            Width="640" Height="550" 
            Title="Account manager." FontSize="21.333">
     <Grid x:Name="LayoutRoot" Margin="2">
@@ -73,7 +73,7 @@
     		</sdk:TabItem>
     		<sdk:TabItem x:Name="MyNetwork" Header="My network">
     			<Grid>
-    				<TheS_Casinova_MLN:MLNUI Margin="0" d:LayoutOverrides="Width, Height"/>
+    				<TheS_Casinova_MLN_Controls:MLNUI d:LayoutOverrides="Height"/>
     			</Grid>
     		</sdk:TabItem>
     	</sdk:TabControl>
