--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GamePlayUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GamePlayUI.xaml
@@ -32,20 +32,26 @@
 				<RowDefinition Height="0.356*"/>
 			</Grid.RowDefinitions>
 			<TextBlock x:Name="GameTime" TextWrapping="Wrap" Text="GameTime" FontSize="21.333" FontWeight="Bold" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-			<Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+			<Grid Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="150,0,0,0">
 				<Rectangle Fill="#FFEBEBEB" RadiusY="4" RadiusX="4" Stroke="Black" VerticalAlignment="Center" Height="45"/>
 				<StackPanel VerticalAlignment="Center">
 					<TextBlock x:Name="Winner" TextWrapping="Wrap" Text="Winner" FontSize="16" Margin="72,0,71,0" d:LayoutOverrides="Width" VerticalAlignment="Top" HorizontalAlignment="Center"/>
 					<TextBlock x:Name="WinnerInformation" TextWrapping="Wrap" Text="WinnerInformation" TextAlignment="Center"/>
 				</StackPanel>
 			</Grid>
-			<Grid HorizontalAlignment="Left" Width="140" Grid.Row="2" VerticalAlignment="Top" Margin="95,0,0,0">
-				<Button x:Name="BetBlack" Content="Black" Margin="0,0,0,20" Height="46" VerticalAlignment="Bottom"/>
-				<TextBlock x:Name="TotalAmountOfBlack" TextWrapping="Wrap" Text="TotalAmountOfBlack" TextAlignment="Center" Margin="0,50,0,0" d:LayoutOverrides="Height" VerticalAlignment="Bottom"/>
-			</Grid>
-			<Grid HorizontalAlignment="Right" Width="140" Grid.Row="2" Margin="0,0,95,0" VerticalAlignment="Top">
-				<Button x:Name="BetWhite" Content="White" Margin="0,0,0,20" VerticalAlignment="Bottom" Height="46"/>
-				<TextBlock x:Name="TotalAmountOfWhite" TextWrapping="Wrap" Text="TotalAmountOfWhite" TextAlignment="Center" Margin="0,50,0,0" d:LayoutOverrides="Height" VerticalAlignment="Bottom"/>
+			<Grid Margin="95,0" Grid.Row="2" Height="66" VerticalAlignment="Top">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="0.5*"/>
+					<ColumnDefinition Width="0.5*"/>
+				</Grid.ColumnDefinitions>
+				<Grid VerticalAlignment="Top" d:LayoutOverrides="GridBox" Margin="0,0,4,0">
+					<Button x:Name="BetBlack" Content="Black" Margin="0,0,0,20" Height="46" VerticalAlignment="Bottom"/>
+					<TextBlock x:Name="TotalAmountOfBlack" TextWrapping="Wrap" Text="TotalAmountOfBlack" TextAlignment="Center" VerticalAlignment="Bottom"/>
+				</Grid>
+				<Grid VerticalAlignment="Top" Grid.Column="1" Margin="4,0,0,0">
+					<Button x:Name="BetWhite" Content="White" Margin="0,0,0,20" VerticalAlignment="Bottom" Height="46"/>
+					<TextBlock x:Name="TotalAmountOfWhite" TextWrapping="Wrap" Text="TotalAmountOfWhite" TextAlignment="Center" VerticalAlignment="Bottom"/>
+				</Grid>
 			</Grid>
 		</Grid>
 	</Grid>
