--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerProfile/Views/AccountManagerWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerProfile/Views/AccountManagerWindow.xaml
@@ -1,10 +1,16 @@
-﻿<sdk:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_MLN_Controls="clr-namespace:TheS.Casinova.MLN.Controls" xmlns:TheS_Casinova_PlayerAccount_Controls="clr-namespace:TheS.Casinova.PlayerAccount.Controls" mc:Ignorable="d" x:Class="TheS.Casinova.PlayerProfile.Views.AccountManagerWindow"
+﻿<sdk:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_MLN_Controls="clr-namespace:TheS.Casinova.MLN.Controls" xmlns:TheS_Casinova_PlayerAccount_Controls="clr-namespace:TheS.Casinova.PlayerAccount.Controls" xmlns:TheS_Casinova_PlayerProfile_ViewModels="clr-namespace:TheS.Casinova.PlayerProfile.ViewModels" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" mc:Ignorable="d" x:Class="TheS.Casinova.PlayerProfile.Views.AccountManagerWindow"
            Width="600" Height="400" 
            Title="Account manager." FontSize="21.333">
+	<sdk:ChildWindow.Resources>
+		<TheS_Casinova_PlayerProfile_ViewModels:AccountManagerViewModel x:Key="AccountManagerViewModelDataSource" d:IsDataSource="True"/>
+	</sdk:ChildWindow.Resources>
+	<sdk:ChildWindow.DataContext>
+		<Binding Source="{StaticResource AccountManagerViewModelDataSource}"/>
+	</sdk:ChildWindow.DataContext>
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition Height="Auto" />
+        	<RowDefinition />
+        	<RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Button x:Name="CloseButton" Content="Close" Click="CloseButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" FontSize="11" />
@@ -13,13 +19,25 @@
     			<Grid>
     				<Grid Height="40" VerticalAlignment="Top">
     					<Rectangle Fill="#FFF4F4F5" Stroke="Black"/>
-    					<Button x:Name="LogEventOptionButton" Content="Single" HorizontalAlignment="Left" Width="50" Margin="8,8,0,9" Height="23" />
+    					<Button x:Name="OptionButton" Content="Single" HorizontalAlignment="Left" Width="50" Margin="8,8,0,9" Height="23" />
     					<TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="~" Margin="236,8,0,9" VerticalAlignment="Center" Visibility="Collapsed"/>
-    					<Button x:Name="LogEventSearchButton" Content="Search" HorizontalAlignment="Right" Margin="0,8,8,9" Width="100"/>
-    					<sdk:DatePicker x:Name="LogEventSearchFromDatePicker" HorizontalAlignment="Left" Margin="62,8,0,9" d:LayoutOverrides="Height" Width="170"/>
-    					<sdk:DatePicker x:Name="LogEventSearchToDatePicker" Margin="249,8,112,9" d:LayoutOverrides="Height" Visibility="Collapsed"/>
+    					<Button x:Name="Search" Content="Search" HorizontalAlignment="Right" Margin="0,8,8,9" Width="100">
+    						<i:Interaction.Triggers>
+    							<i:EventTrigger EventName="Click">
+    								<ei:CallMethodAction MethodName="Search" TargetObject="{Binding}"/>
+    							</i:EventTrigger>
+    						</i:Interaction.Triggers>
+    					</Button>
+    					<sdk:DatePicker x:Name="FirstSearch" HorizontalAlignment="Left" Margin="62,8,0,9" d:LayoutOverrides="Height" Width="170" SelectedDate="{Binding FirstSearch}"/>
+    					<sdk:DatePicker x:Name="SecondSearch" Margin="249,8,112,9" d:LayoutOverrides="Height" Visibility="Collapsed" SelectedDate="{Binding SecondSearch}"/>
     				</Grid>
-    				<sdk:DataGrid x:Name="LogEventDataGrid" Margin="0,44,0,0"/>
+    				<sdk:DataGrid x:Name="LogEventDataGrid" Margin="0,44,0,0" AutoGenerateColumns="False" ItemsSource="{Binding LogEventInformations}">
+    					<sdk:DataGrid.Columns>
+    						<sdk:DataGridTextColumn Binding="{Binding Time}" Header="Time"/>
+    						<sdk:DataGridTextColumn Binding="{Binding Action}" Header="Action"/>
+    						<sdk:DataGridTextColumn Binding="{Binding Money}" Header="Money"/>
+    					</sdk:DataGrid.Columns>
+    				</sdk:DataGrid>
     			</Grid>
     		</sdk:TabItem>
     		<sdk:TabItem x:Name="Information" Header="Information">
