--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/ChipExchange/Views/DepositWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/ChipExchange/Views/DepositWindow.xaml
@@ -22,8 +22,8 @@
     					<Rectangle Fill="Black" Stroke="Black" Height="17" VerticalAlignment="Top"/>
     					<Rectangle Fill="White" Stroke="Black" Margin="0,17,0,0"/>
     					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Pay type" VerticalAlignment="Top" Foreground="White" Margin="8,1,0,0"/>
-    					<ComboBox x:Name="DepositPayTypePayByComboBox" Margin="114,25,95,0" Height="22" VerticalAlignment="Top"/>
-    					<Button x:Name="DepositPayTypeEditButton" Content="Edit" HorizontalAlignment="Right" Width="83" Margin="0,25,8,0" VerticalAlignment="Top"/>
+    					<ComboBox x:Name="DepositPayBy" Margin="114,25,95,0" Height="22" VerticalAlignment="Top"/>
+    					<Button x:Name="DepositEditButton" Content="Edit" HorizontalAlignment="Right" Width="83" Margin="0,25,8,0" VerticalAlignment="Top" Click="DepositEditButton_Click" />
     					<Image Margin="28,24,0,0" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/question.png" Stretch="Fill" HorizontalAlignment="Left" Width="23" Height="23" VerticalAlignment="Top" d:LayoutOverrides="Height" ToolTipService.ToolTip="[Description] is one of four rhetorical modes (also known as modes of discourse)." Cursor="Hand"/>
     					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Pay by" Margin="67,28,0,0" VerticalAlignment="Top" Width="43" TextAlignment="Right" d:LayoutOverrides="VerticalAlignment"/>
     					<ScrollViewer Margin="8,51,8,8">
@@ -75,11 +75,11 @@
     					<Rectangle Fill="Black" Stroke="Black" Height="17" VerticalAlignment="Top"/>
     					<Rectangle Fill="White" Stroke="Black" Margin="0,17,0,0"/>
     					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Pay type" VerticalAlignment="Top" Foreground="White" Margin="8,1,0,0"/>
-    					<Button x:Name="CashBackPayTypeOKButton" Content="OK" HorizontalAlignment="Right" Width="75" Margin="0,53,8,0" VerticalAlignment="Top"/>
+    					<Button x:Name="CashbackOKButton" Content="OK" HorizontalAlignment="Right" Width="75" Margin="0,53,8,0" VerticalAlignment="Top" Click="CashbackOKButton_Click" />
     					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Amount" Margin="67,55,0,0" VerticalAlignment="Top" TextAlignment="Right"/>
-    					<TextBox x:Name="CashBackPayTypeAmountTextBox" TextWrapping="Wrap" Text="CashBackPayTypeAmountTextBox" VerticalAlignment="Bottom" Margin="114,0,87,5"/>
+    					<TextBox x:Name="CashbackAmount" TextWrapping="Wrap" Text="CashbackAmount" VerticalAlignment="Bottom" Margin="114,0,87,5"/>
     					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Pay by" Margin="67,28,0,0" VerticalAlignment="Top" Width="43" TextAlignment="Right"/>
-    					<ComboBox x:Name="CashBackPayTypePayByTextBox" Margin="114,25,87,34"/>
+    					<ComboBox x:Name="CashbackPayBy" Margin="114,25,87,34"/>
     					<Image Margin="28,24,0,34" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/question.png" Stretch="Fill" HorizontalAlignment="Left" Width="23" Height="23" ToolTipService.ToolTip="[Description] is one of four rhetorical modes (also known as modes of discourse)." Cursor="Hand"/>
     					<Image Margin="28,0,0,5" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/question.png" Stretch="Fill" HorizontalAlignment="Left" Width="23" Height="23" ToolTipService.ToolTip="[Description] is one of four rhetorical modes (also known as modes of discourse)." Cursor="Hand" VerticalAlignment="Bottom" d:LayoutOverrides="Height"/>
     				</Grid>
@@ -94,10 +94,10 @@
     					<Rectangle Fill="Black" Stroke="Black" Height="17" VerticalAlignment="Top"/>
     					<Rectangle Fill="White" Stroke="Black" Margin="0,17,0,0"/>
     					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Pay type" VerticalAlignment="Top" Foreground="White" Margin="8,1,0,0"/>
-    					<Button x:Name="VoucherPayTypeOKButton" Content="OK" HorizontalAlignment="Right" Width="75" Margin="0,25,8,0" VerticalAlignment="Top"/>
+    					<Button x:Name="VoucherOKButton" Content="OK" HorizontalAlignment="Right" Width="75" Margin="0,25,8,0" VerticalAlignment="Top" Click="VoucherOKButton_Click" />
     					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Amount" Margin="67,28,0,0" VerticalAlignment="Top" TextAlignment="Right"/>
     					<Image Margin="28,24,0,8" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/question.png" Stretch="Fill" HorizontalAlignment="Left" Width="23" Height="23" ToolTipService.ToolTip="[Description] is one of four rhetorical modes (also known as modes of discourse)." Cursor="Hand"/>
-    					<TextBox x:Name="VoucherPayTypeAmountTextBox" TextWrapping="Wrap" Text="VoucherPayTypeAmountTextBox" Margin="114,24,87,7" d:LayoutOverrides="Height"/>
+    					<TextBox x:Name="VoucherAmount" TextWrapping="Wrap" Text="VoucherAmount" Margin="114,24,87,7" d:LayoutOverrides="Height"/>
     				</Grid>
     			</Grid>
     		</controls:TabItem>
